--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@
 }
 
 a {
-	color: #ff00ff;
+	color: #2c3e50;
 	text-decoration: none;
 }
 
@@ -164,10 +164,9 @@ button:focus {
 	font-size: 15px;
 	text-align: center;
 	display: none;
-	color: #00f3ff;
-	background-color: rgba(5, 5, 16, 0.95);
-	text-shadow: 0 0 5px #00f3ff;
-	border: 1px solid #00f3ff;
+	color: #ecf0f1;
+	background-color: #2c3e50;
+	border: 0px solid #2c3e50;
 }
 
 #colorBlindBtn {
@@ -315,8 +314,8 @@ button:focus {
 .centeredSubSubHeader {
 	font-size: 1.4rem;
 	text-align: center;
-	color: #ff00ff;
-	text-shadow: 0 0 5px #ff00ff;
+	background: #ecf0f1;
+	color: #2c3e50;
 }
 
 #buttonCont {
