--- a/style.css
+++ b/style.css
@@ -1,190 +1,558 @@
-:root {
-    --neon-blue: #00f3ff;
-    --neon-pink: #ff00ff;
-    --neon-green: #00ff00;
-    --neon-red: #ff0000;
-    --bg-color: #050510;
-    --ui-font: 'Exo 2', sans-serif;
+* {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	padding: 0;
+	margin: 0;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body,
-html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: var(--bg-color);
-    font-family: var(--ui-font);
-    touch-action: none;
-    /* Prevent double tap zoom etc */
-    user-select: none;
-    -webkit-user-select: none;
+#HIGHSCORE {
+	position: absolute;
+	left: 50%;
+	width: 250px;
+	overflow: visible;
+	margin-left: -175px;
+	font-family: Exo;
+
 }
 
-#game-container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#container {
+	color: #232323;
+	position: absolute;
+	left: 50%;
+	top: calc(50%);
+	text-align: center;
+	transform: translate(-50%, -50%);
+	font-family: Exo;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	display: none;
+}
+
+.tweet {
+	font-size: 2rem;
+	color: #4099FF;
+}
+
+@media only screen and (min-device-width:320px) and (max-device-width:480px) {
+	.tweet {
+		font-size: 1rem;
+	}
+}
+
+a {
+	color: #232323;
+}
+
+.navbar {
+	width: 80%;
+	margin: 0 auto;
+	padding: 2.5vmin 0;
+	text-align: center;
+}
+
+.navbar li {
+	display: inline-block;
+	text-align: center;
+	width: calc(33% - 1.25vmin);
+}
+
+#title {
+	color: #ecf0f1;
+	font-size: 6vmin;
+}
+
+#score {
+	font-size: 4vmin;
+	text-align: center;
+	width: 30%;
+}
+
+#highscores {
+	text-align: center;
+	list-style: none;
+}
+
+.not-visible {
+	display: none;
+}
+
+button {
+	color: #ecf0f1;
+	background-color: rgba(0, 0, 0, 0);
+	border: 0;
+}
+
+button:focus {
+	outline: 0;
+}
+
+#openSideBar {
+	position: fixed;
+	margin-top: 6px;
+	width: 72px;
+	height: 72px;
+	margin-left: 11px;
+	z-index: 3003;
+	color: #232323;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+
+}
+
+
+#pauseBtn {
+	display: none;
+	position: fixed;
+	margin-bottom: 7px;
+	width: 72px;
+	height: 72px;
+	margin-right: 11px;
+	z-index: 3000;
+	color: #232323;
+	cursor: pointer;
+	right: 0;
+	bottom: 0;
+	z-index: 99;
+}
+
+#restartBtn {
+	display: none;
+	position: fixed;
+	margin-bottom: 7px;
+	width: 72px;
+	height: 72px;
+	margin-left: 11px;
+	z-index: 3000;
+	color: #232323;
+	cursor: pointer;
+	bottom: 0;
+	z-index: 99;
+}
+
+#startBtn {
+	position: absolute;
+	left: 40%;
+	top: 38%;
+	height: 25%;
+	width: 25%;
+	z-index: 99999999;
+	cursor: pointer;
+}
+
+#helpScreen {
+	height: 100%;
+	width: 100%;
+	z-index: 3001;
+	position: fixed;
+	top: 0;
+	margin: 0;
+	font-size: 15px;
+	text-align: center;
+	display: none;
+	color: #232323;
+	background-color: rgba(236, 240, 241, 1);
+}
+
+#colorBlindBtn {
+	position: absolute;
+	width: 120px;
+	height: 20px;
+	z-index: 9999;
+	left: 47%;
+	top: 65%;
+	font-size: 15px;
+	text-align: center;
+	color: #232323;
+	cursor: pointer;
+}
+
+#inst_main_body {
+	padding: 0px;
+	font-size: 1.2em;
+	left: 50%;
+	top: 50%;
+	position: absolute;
+	text-align: left;
+	max-width: 400px;
+	/*margin-top:30px;*/
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+
+#inst_main_body>a {
+	font-weight: bold;
+}
+
+#inst_main_body>hr {
+	width: 100%;
+	color: #232323;
+	background-color: #232323;
+	height: 1px;
+	border: 0;
+}
+
+#inst_main_body>p {
+	margin-bottom: 15px;
+}
+
+#instructions_head {
+	text-align: center;
+	font-size: 1.5em;
+	padding-bottom: 4px;
+}
+
+
+#highScoreInGameTextHeader {
+	color: #bdc3c7;
+	width: 100%;
+}
+
+#highScoreInGameText {
+	position: absolute;
+	top: 10px;
+	text-align: center;
+	width: 200px;
+	left: 50%;
+	margin-left: -100px;
+}
+
+#currentHighScore {
+	color: #2c3e50;
+	width: 100%;
+	margin-top: -5px;
+	font-size: 2em;
+}
+
+@media only screen and (max-device-width:480px) {
+	#helpScreen {
+		position: fixed;
+		top: 2px;
+		padding-top: 20px;
+		margin: 0;
+		width: 100%;
+		height: 100%;
+		font-size: 13px;
+		text-align: center;
+	}
+
+	#inst_main_body {
+		width: calc(100% - 70px);
+		transform: translate(-50%, -50%);
+		-webkit-transform: translate(-50%, -50%);
+		-moz-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+	}
+
+	#instructions_head {
+		padding-left: 0%;
+	}
+
+	#openSideBar {
+		width: 60px;
+		height: 60px;
+	}
+
+	#pauseBtn {
+		width: 60px;
+		height: 60px;
+	}
+
+	#restartBtn {
+		width: 60px;
+		height: 60px;
+	}
+}
+
+.overlay {
+	position: absolute;
+	height: 20%;
+	width: 100%;
+	left: 50%;
+	top: 50%;
+	margin-left: -50%;
+	margin-top: -10%;
+	z-index: 3000;
+	color: #232323;
+	text-align: center;
+}
+
+.helpText {
+	z-index: 3001;
+}
+
+.centeredHeader {
+	font-size: 5vw;
+	text-align: center;
+	line-height: 4rem;
+}
+
+.centeredSubHeader {
+	font-size: 2.2rem;
+	line-height: 1em;
+	text-align: center;
+}
+
+.centeredSubSubHeader {
+	font-size: 1.4rem;
+	text-align: center;
+}
+
+#buttonCont {
+	position: absolute;
+	left: 50%;
+	width: 310px;
+	margin-left: -8px;
+	transform: translate(-50%, 0%);
+	-webkit-transform: translate(-50%, 0%);
+	-moz-transform: translate(-50%, 0%);
+	-ms-transform: translate(-50%, 0%);
+}
+
+@media only screen and (orientation:landscape) {
+	#buttonCont {
+		bottom: calc(50vh - 19vh - 36px);
+	}
+
+	#container {
+		top: calc(50vh - 11vh);
+	}
+}
+
+@media only screen and (orientation:portrait) {
+	#buttonCont {
+		bottom: calc(50vh - 19vw - 36px);
+	}
+
+	#container {
+		top: calc(50vh - 11vw);
+	}
+}
+
+@media only screen and (min-device-width:320px) and (max-device-width:600px) {
+	.centeredHeader {
+		font-size: 2rem;
+		text-align: center;
+		line-height: 0.6rem;
+	}
+
+	.centeredSubHeader {
+		font-size: 1rem;
+		text-align: center;
+	}
+
+	.overlay {
+		margin-top: -20%;
+	}
+
+	#buttonCont {
+		width: 280px;
+	}
+
+	@media only screen and (orientation:landscape) {
+		#buttonCont {
+			bottom: 119px;
+		}
+	}
+
+	@media only screen and (orientation:portrait) {
+		#buttonCont {
+			bottom: 119px;
+		}
+	}
+}
+
+@import url(http://fonts.googleapis.com/css?family=Exo+2:100,200,300,400,500,600,700,800,900);
+
+.blur {
+	opacity: 0.1;
+}
+
+* {
+	padding: 0;
+	margin: 0;
+}
+
+body {
+	background: #050510;
+	/* Dark Neon Background */
+	font-family: 'Exo 2', sans-serif;
+	margin: 0;
+	overflow: hidden;
+	color: #ecf0f1;
 }
 
 canvas {
-    display: block;
-    z-index: 1;
+	width: 100%;
+	height: 100%;
 }
 
-#ui-layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    pointer-events: none;
-    /* Let clicks pass through to canvas when playing */
+#clickToExit {
+	cursor: pointer;
 }
 
-.screen {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: rgba(5, 5, 16, 0.85);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    pointer-events: none;
+#canvas {
+	transition: all 0.5s ease;
+	position: absolute;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #ecf0f1;
+	z-index: 0;
 }
 
-.screen.active {
-    opacity: 1;
-    pointer-events: all;
-    cursor: pointer;
+#title {
+	z-index: 99;
+	margin-top: 20px;
+	color: #2c3e50;
 }
 
-.neon-title {
-    font-size: 4rem;
-    color: #fff;
-    text-shadow:
-        0 0 5px #fff,
-        0 0 10px #fff,
-        0 0 20px var(--neon-blue),
-        0 0 40px var(--neon-blue),
-        0 0 80px var(--neon-blue);
-    margin: 0;
+#gameoverscreen {
+	/*display:none;*/
 }
 
-.text-red {
-    text-shadow:
-        0 0 5px #fff,
-        0 0 10px #fff,
-        0 0 20px var(--neon-red),
-        0 0 40px var(--neon-red);
+#restart {
+	display: none;
+	cursor: pointer !important;
+	margin: 0;
+	padding: 0;
+	bottom: 15px;
+	position: absolute;
+	left: calc(50% - 124px);
+	transform: translate(-50%, 0%);
+	-webkit-transform: translate(-50%, 0%);
+	-moz-transform: translate(-50%, 0%);
+	-ms-transform: translate(-50%, 0%);
+	margin-bottom: -3.5px;
 }
 
-.blink {
-    animation: blinker 1.5s linear infinite;
-    color: var(--neon-pink);
-    font-size: 1.5rem;
-    margin-top: 20px;
-    letter-spacing: 2px;
+#socialShare {
+	display: none;
+	margin: 0;
+	padding: 0;
+	bottom: 0;
+	margin-bottom: 6.5px;
+	position: absolute;
+	left: calc(50% + 30px);
+	transform: translate(-50%, 0%);
+	-webkit-transform: translate(-50%, 0%);
+	-moz-transform: translate(-50%, 0%);
+	-ms-transform: translate(-50%, 0%);
+	padding-bottom: 2px;
 }
 
-@keyframes blinker {
-    50% {
-        opacity: 0;
-    }
+.unselectable {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-#score-board {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    pointer-events: auto;
+#afterhr {
+	margin: 0;
+	padding: 0;
+	margin-bottom: -10px;
+	padding-bottom: -10px;
 }
 
-.score-title {
-    font-size: 0.8rem;
-    color: #888;
+body {
+	overflow: hidden;
 }
 
-#score-value {
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: #fff;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+#gameoverscreen {
+	padding: 8px;
 }
 
-/* SL Integration UI */
-.sl-integration {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
+@font-face {
+	font-family: Exo;
+	font-weight: light;
+	src: url("./fonts/Exo2-ExtraLight.otf") format("opentype");
 }
 
-#player-name-input {
-    background: rgba(0, 0, 0, 0.5);
-    border: 2px solid var(--neon-blue);
-    color: #fff;
-    padding: 10px;
-    font-family: var(--ui-font);
-    font-size: 1.2rem;
-    text-align: center;
-    text-transform: uppercase;
-    outline: none;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 243, 255, 0.2);
-    width: 200px;
+@font-face {
+	font-family: Exo;
+	src: url("./fonts/Exo2-Regular.otf") format("opentype");
 }
 
-#submit-btn,
-#restart-btn {
-    background: var(--neon-blue);
-    color: #000;
-    border: none;
-    padding: 12px 25px;
-    font-family: var(--ui-font);
-    font-weight: bold;
-    font-size: 1rem;
-    cursor: pointer;
-    box-shadow: 0 0 15px var(--neon-blue);
-    transition: all 0.2s;
-    border-radius: 5px;
-    text-transform: uppercase;
+@font-face {
+	font-family: Exo;
+	font-weight: bold;
+	src: url("./fonts/Exo2-SemiBold.otf") format("opentype");
 }
 
-#restart-btn {
-    background: var(--neon-pink);
-    box-shadow: 0 0 15px var(--neon-pink);
-    color: white;
-    margin-top: 20px;
+.GOTitle {
+	font-weight: bold;
+	font-size: 24.2000px;
 }
 
-#submit-btn:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 25px var(--neon-blue);
+.scoreNum {
+	font-weight: normal ! important;
 }
 
-#restart-btn:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 25px var(--neon-pink);
+#cScore {
+	font-size: 60.5000px;
+	font-weight: light;
+	margin-bottom: 5px;
+	margin-top: -10px;
 }
 
-#submit-status {
-    height: 20px;
-    color: var(--neon-green);
-    font-size: 0.9rem;
+#highScoresTitle {
+	margin-bottom: 2px;
 }
 
-.final-score {
-    font-size: 2rem;
-    color: #fff;
-    margin-top: 10px;
+.score {
+	font-weight: light;
+	line-height: 18px;
+}
+
+
+
+
+#bottomContainer {
+	position: absolute;
+	width: 100%;
+	bottom: 0px;
+}
+
+#androidBadge {
+	position: absolute;
+	height: 41px;
+	margin-top: 5px;
+	left: calc(50% - 66px);
+	transform: translate(calc(-50% - 4px), -1px);
+	-webkit-transform: translate(calc(-50% - 4px), -1px);
+	-moz-transform: translate(calc(-50% - 4px), -1px);
+	-ms-transform: translate(calc(-50% - 4px), -1px);
+}
+
+#iOSBadge {
+	margin-top: 5px;
+	position: absolute;
+	left: calc(50% + 65px);
+	transform: translate(calc(-50% - 4px), 0%);
+	-webkit-transform: translate(calc(-50% - 4px), 0%);
+	-moz-transform: translate(calc(-50% - 4px), 0%);
+	-ms-transform: translate(calc(-50% - 4px), 0%);
+}
+
+#authors {
+	position: absolute;
+	width: 200px;
+	bottom: 0px;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	-webkit-transform: translate(-50%, 0%);
+	-moz-transform: translate(-50%, 0%);
+	-ms-transform: translate(-50%, 0%);
 }
